Fix the issues with handlebars, routes and models.

--- a/Unsolved/views/drinks.handlebars
+++ b/Unsolved/views/drinks.handlebars
@@ -3,14 +3,14 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Drinks</h5>
+          <h5 class="card-title">Cosmic Cocktails</h5>
           <p>
             <strong>ID</strong>: {{drinks.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{drinks.text}}</p>
+            <strong>Drink Name</strong>: {{drinks.drink_name}}</p> <!--change .text column name to drink_name -->
           <p>
-            <strong>Description:</strong> {{drinks.description}}</p>
+            <strong> Drink Ingredients:</strong> {{drinks.ingredients}}</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
