--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -3,18 +3,21 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>Name Your Poisin!</h2>
+        <h2>Pick Your Poison!</h2>
+
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="drinks-text">Drinks</label>
-            <input type="text" id="drinks-text" class="form-control" aria-describedby="drinks-text" placeholder="Enter Drinks Text">
+            <label for="drinks-name">Drink Name</label>
+            <input type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name" placeholder="Enter Drink Name">
           </div>
+
           <div class="form-group">
-            <label for="drinks-description">Drinks Description</label>
-            <textarea class="form-control" id="drinks-description" aria-describedby="drinks-description" placeholder="Enter Drinks Description"></textarea>
+            <label for="drinks-ingredients">Drink Ingredients</label>
+            <textarea class="form-control" id="drinks-ingredients" aria-describedby="drinks-ingriedients" placeholder="Enter Drink Ingredients"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
+
         <h3>Drinks:</h3>
         <ul id="drinks-list" class="list-group">
           {{#each drinks}}
