Created 3rd party api code to pull in specific categories. Debugged for issues with delete button, and models and front end.

--- a/Unsolved/views/drinks.handlebars
+++ b/Unsolved/views/drinks.handlebars
@@ -9,8 +9,8 @@
           <p>
           <p>
             <strong>Drink Name</strong>: {{drinks.drink_name}}</p> <!--change .text column name to drink_name -->
-          <p>
-            <strong> Drink Ingredients:</strong> {{drinks.ingredients}}</p>
+          <!--<p>
+            <strong> Drink Ingredients:</strong> {{drinks.ingredients}}</p>-->
             <a href="/">← Back To Home</a>
         </div>
       </div>
