--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -5,16 +5,16 @@
         <h1>{{msg}}</h1>
         <h2>Pick Your Poison!</h2>
 
-        <form class="clearfix mb-4" action="POST">
+        <form class="clearfix mb-4">
           <div class="form-group">
             <label for="drinks-name">Drink Name</label>
             <input type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name" placeholder="Enter Drink Name">
           </div>
 
-          <div class="form-group">
+          <!--<div class="form-group">
             <label for="drinks-ingredients">Drink Ingredients</label>
             <textarea class="form-control" id="drinks-ingredients" aria-describedby="drinks-ingriedients" placeholder="Enter Drink Ingredients"></textarea>
-          </div>
+          </div>-->
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
 
@@ -22,7 +22,7 @@
         <ul id="drinks-list" class="list-group">
           {{#each drinks}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="drink/{{this.id}}">{{this.text}}</a>
+            <a href="drink/{{this.id}}">{{this.drink_name}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
@@ -32,5 +32,4 @@
   </div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+
