--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -6,15 +6,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <!---javascript-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
   <title>Cosmic Cocktails </title>
 </head>
 
 <body>
   {{{body}}}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="/js/index.js"></script>
 
-  <script src="assets/javascript/index.js"></script>
-  
 </body>
 
 </html>
