--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -3,26 +3,26 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>Pick Your Poison!</h2>
+        {{!-- <h2>Pick Your Poison!</h2> --}}
 
-        <form class="clearfix mb-4">
+        <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="drinks-name">Drink Name</label>
             <input type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name" placeholder="Enter Drink Name">
           </div>
 
-          <!--<div class="form-group">
+          {{!-- <div class="form-group">
             <label for="drinks-ingredients">Drink Ingredients</label>
             <textarea class="form-control" id="drinks-ingredients" aria-describedby="drinks-ingriedients" placeholder="Enter Drink Ingredients"></textarea>
-          </div>-->
+          </div> --}}
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
 
-        <h3>Drinks:</h3>
+        {{!-- <h3>Drinks:</h3> --}}
         <ul id="drinks-list" class="list-group">
           {{#each drinks}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="drink/{{this.id}}">{{this.drink_name}}</a>
+            <a href="drink/{{this.id}}">{{this.text}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
@@ -31,5 +31,4 @@
     </div>
   </div>
 </div>
-
 
