--- a/Unsolved/public/styles/styles.css
+++ b/Unsolved/public/styles/styles.css
@@ -1,3 +1,12 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+ul#drinks-list img.thumbnail {
+  width: 50px;
+  height: 50px;
+}
+
+.login-form {
+  max-width: 300px;
+}
