Messing with the CSS

--- a/Unsolved/public/styles/styles.css
+++ b/Unsolved/public/styles/styles.css
@@ -1,3 +1,9 @@
+@font-face{
+  font-family:"potra";
+  src: url('../assets/Cocktail\ Script.ttf');
+}
+
+
 .list-group-item {
   line-height: 2.5;
 }
@@ -9,4 +15,85 @@ ul#drinks-list img.thumbnail {
 
 .login-form {
   max-width: 300px;
+}
+
+body {
+  background-image: url(../assets/cosmic.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+#submit{
+  
+  transform: translate(-50%,-50%);
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  box-sizing: border-box;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 30px;
+  z-index: 1;
+  margin-right: -42px;
+  margin-top: 10px;
+  font-weight: bold;
+
+
+}
+
+
+#submit:hover
+{
+  animation: animate 8s linear infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {
+      background-position: 0%;
+    }
+    100%
+    {
+      background-position: 400%;
+    }
+}
+
+#submit:before
+{
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+    background-size: 400%;
+    border-radius: 40px;
+    filter: blur(20px);
+    opacity: 0;
+    transition: 0.5s;
+    
+}
+
+#submit:hover:before
+{
+  filter: blur(20px);
+  opacity: 1;
+  animation: animate 8s linear infinite;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p{
+  font-family: "potra";
+  font-weight: bolder;
+}
+
+#ingredientPics{
+  padding:5px;
 }
