--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -3,36 +3,15 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        {{!-- <h2>Pick Your Poison!</h2> --}}
-
-<<<<<<< HEAD
-        <form class="clearfix mb-4" action="POST">
-=======
+        <h2>Pick Your Poison!</h2>
         <form class="clearfix mb-4" method="GET" action="/">
->>>>>>> d41d33cef7d41110282ab7d3884adc9d8e1fe436
           <div class="form-group">
             <label for="drinks-name">Drink Name</label>
-            <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name" placeholder="Enter Drink Name">
+            <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name"
+              placeholder="Enter Drink Name">
           </div>
-<<<<<<< HEAD
-
-          {{!-- <div class="form-group">
-            <label for="drinks-ingredients">Drink Ingredients</label>
-            <textarea class="form-control" id="drinks-ingredients" aria-describedby="drinks-ingriedients" placeholder="Enter Drink Ingredients"></textarea>
-          </div> --}}
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-
-        {{!-- <h3>Drinks:</h3> --}}
-        <ul id="drinks-list" class="list-group">
-          {{#each drinks}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="drink/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-=======
           <button type="submit" id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-
         <h3>Results:</h3>
         <ul id="drinks-list" class="list-group">
           {{#each drinks}}
@@ -40,13 +19,10 @@
             <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
             <img class="thumbnail" src="{{this.drinkImage}}" alt="">
             {{!-- <button class="btn btn-danger float-right delete">ｘ</button> --}}
->>>>>>> d41d33cef7d41110282ab7d3884adc9d8e1fe436
           </li>
           {{/each}}
         </ul>
-        
       </div>
     </div>
   </div>
 </div>
-
