--- a/Unsolved/views/favorites.handlebars
+++ b/Unsolved/views/favorites.handlebars
@@ -1,12 +1,29 @@
 <div class="container">
-  <h3>Favorites:</h3>
-  <ul id="drinks-list" class="list-group">
-    {{#each drinks}}
-      <li data-id="{{this.idDrink}}" class="list-group-item">
-        <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
-        <img class="thumbnail" src="{{this.drinkImage}}" alt="">
-        {{!-- <button class="btn btn-danger float-right delete">ｘ</button> --}}
-      </li>
-    {{/each}}
-  </ul>
+  <div class="row"  id="fav-img" >
+    <div class="col-md-12 fare">
+      <div class="card fareDisplay" id="fav-card">
+       
+          <div class="card bg-white text-dark" style="width: 30rem;">
+            <div class="card-header"> Your Favorite Cosmic Cocktails Recipe List:
+
+            </div>
+            <div class="card-body">
+
+              <!-- shows up on main page, and includes favorites list - text not showing-->
+              <ul id="drinks-list" class="list-group">
+                {{#each drinks}}
+                <li data-id="{{this.idDrink}}" class="list-group-item">
+                  <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
+                  <img class="thumbnail" src="{{this.drinkImage}}" alt="">
+                  <p>"This is a favorite"</p>
+                  <button class="btn btn-danger float-right delete" "text-white">remove from Favorites</button>
+                </li>
+                {{/each}}
+              </ul>
+            </div>
+          </div>
+        
+      </div>
+    </div>
+  </div>
 </div>
