--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -1,28 +1,45 @@
+<!-- 2. after user enters a drink to search, images populate on  index page (background still looks like the main page) like modal, holding search results-->
 <div id="home">
+  <div class="jumbotron jumbotron-fluid" id="jumbo-index">
+    <div class="container">
+      <h1 class="display-4">Cosmic Cocktails</h1>
+      <h1>{{msg}}</h1>
+      <h2>Be your own bartender! Mix-up your own drink!</h2>
+
+      <form class="clearfix mb-4" method="GET" action="/">
+        <div class="form-group">
+          <label for="drinks-name">Drink Name</label>
+          <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name"
+            placeholder="Enter Drink Name or a Letter">
+        </div>
+        <button type="submit" id="submit" class="btn btn-primary float-right">Submit</button>
+      </form>
+    </div>
+  </div>
+  
   <div class="container">
     <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>Pick Your Poison!</h2>
-        <form class="clearfix mb-4" method="GET" action="/">
-          <div class="form-group">
-            <label for="drinks-name">Drink Name</label>
-            <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name"
-              placeholder="Enter Drink Name">
+      <div class="col-md-12 fare">
+        <div class="card fareDisplay" style="align: center;" id="index-img">
+          <div class="col-6 offset-3">
+            <div class="card bg-dark text-white" style="width: 30rem;">
+              <div class="card-header">Results: </div>
+              <div class="card-body">
+                
+                <ul id="drinks-list" class="list-group">
+                  {{#each drinks}}
+                  <li data-id="{{this.idDrink}}" class="list-group-item">
+                    <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
+                    <img class="thumbnail" src="{{this.drinkImage}}" alt="">
+
+                    <p>index page</p>
+                  </li>
+                  {{/each}}
+                </ul>
+              </div>
+            </div>
           </div>
-          <button type="submit" id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Results:</h3>
-        <ul id="drinks-list" class="list-group">
-          {{#each drinks}}
-          <li data-id="{{this.idDrink}}" class="list-group-item">
-            <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
-            <img class="thumbnail" src="{{this.drinkImage}}" alt="">
-            {{!-- <button class="btn btn-danger float-right delete">ｘ</button> --}}
-          </li>
-          {{/each}}
-        </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
