--- a/Unsolved/views/drinks.handlebars
+++ b/Unsolved/views/drinks.handlebars
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row">
     <div class="col-8 offset-2">
@@ -10,7 +11,9 @@
           <p>
             <strong>Drink Name</strong>: {{drinks.drink_name}}</p> <!--change .text column name to drink_name -->
           <!--<p>
+            
             <strong> Drink Ingredients:</strong> {{drinks.ingredients}}</p>-->
+            <p>"This is drinks plural page"</p>
             <a href="/">← Back To Home</a>
         </div>
       </div>
