--- a/Unsolved/views/login.handlebars
+++ b/Unsolved/views/login.handlebars
@@ -1,22 +1,31 @@
-<div class="container text-center login-form">
-  <form class="form-signin">
-    {{!-- <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> --}}
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">© 2017-2020</p>
-  </form>
+<div class="container" id="login-img">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="container text-center login-form">
 
-  <form action="/login/">
-    {{!-- /favorites/userID --}}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Login Test User</button>
-  </form>
+        <form class="form-signin">
+          <!-- main page and it shows login-->
+          {{!-- <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> --}}
+          <h1 class="h1 mb-6 font-weight-normal text-black">Please sign in</h1>
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+          <div class="checkbox mb-r text-white">
+            <label>
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <p class="mt-5 mb-4 text-muted">© 2017-2020</p>
+        </form>
+        
+        <form action="/login/">
+          {{!-- /favorites/userID --}}
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Login Test User</button>
+          <p>this is the login page</p>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
