--- a/Unsolved/views/login.handlebars
+++ b/Unsolved/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="container" id="login-img">
+{{!-<div class="container" id="login-img">
   <div class="row">
     <div class="col-md-12">
       <div class="container text-center login-form">
@@ -28,4 +28,4 @@
       </div>
     </div>
   </div>
-</div>
+</div>--}}
