--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -15,9 +15,7 @@
 <body class="class-for-main">
   {{!-- Nav Bar --}}
   <nav class="navbar navbar-dark bg-dark">
-   <a class="navbar-brand" href="#">
-    <img src="../assets/img/catcosmic.jpg" width="40" height="40" alt="">
-  </a>
+  
   {{!--<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">--}}
     <h3 class="my-0 mr-md-auto text-light font-weight-normal">Cosmic Cocktails</h3>
     
@@ -25,7 +23,7 @@
       <a class="p-2 text-light" href="/">Home</a>
       <a class="p-2 text-light" href="/favorites">Favorites</a>
     </nav>
-    <a class="btn btn-outline-primary" href="/login">Sign In</a>
+    {{!--<a class="btn btn-outline-primary" href="/login">Sign In</a>--}}
 
   </nav>
 
@@ -33,7 +31,7 @@
     
     {{{body}}}
 
-  <p>main page</p>
+  
   
   </main>
 
