--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
     
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-light" href="/">Home</a>
-      <a class="p-2 text-light" href="/favorites">Favorites</a>
+      <a class="p-2 text-light" href="/favorites">History</a>
     </nav>
     {{!--<a class="btn btn-outline-primary" href="/login">Sign In</a>--}}
 
