--- a/Unsolved/public/styles/styles.css
+++ b/Unsolved/public/styles/styles.css
@@ -1,4 +1,3 @@
-
 /*for main*/
 .navbar {
   height: 100px;
@@ -8,15 +7,6 @@ h5 {
   src: url("../assets/img/Bevan.ttf")
 }
 
-/*index*/
-#home {
-  background-image: url(../assets/img/cosmic.jpg);
-  background-repeat: no-repeat;
-  background-position: fixed;
-  background-size: initial;
-  width: auto;
-  
-}
 
 #drinks-name {
   border: 5px solid darkslategrey;
@@ -58,7 +48,7 @@ h5 {
   animation: animate 8s linear infinite;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -66,7 +56,8 @@ h5,
 p{
   font-family: "potra";
   font-weight: bolder;
-}
+} */
+
 #submit:hover
 {
   animation: animate 8s linear infinite;
@@ -124,6 +115,35 @@ ul#drinks-list img.thumbnail {
 
 
 }
+
+/*drink*/
+ul#drinks-list img.thumbnail {
+  width: 50px;
+  height: 50px;
+}
+#drink-fonts {
+  font-size: 20px;
+}
+.drink-font {
+  font-size: 20 px;
+}
+#card-border {
+  border: 1px solid lightslategrey;
+  text-align: center;
+}
+
+@keyframes animate
+{
+    0%
+    {
+      background-position: 0%;
+    }
+    100%
+    {
+      background-position: 400%;
+    }
+}
+
 /*footer
 #img-foot {
   background-image: url(../assets/img/handlebars.jpg);
@@ -142,17 +162,7 @@ ul#drinks-list img.thumbnail {
 
 
 
-@keyframes animate
-{
-    0%
-    {
-      background-position: 0%;
-    }
-    100%
-    {
-      background-position: 400%;
-    }
-}
+
 
 
 
