--- a/Unsolved/views/drink.handlebars
+++ b/Unsolved/views/drink.handlebars
@@ -1,9 +1,23 @@
 <div class="container" id="drink-img">
   <div class="row">
+    <style>
+      body {
+        background: #FC5C7D;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #6A82FB, #FC5C7D);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+        width: auto;
+        align-items: center;
+      }
+    </style>
+
     <div class="col-md-5 fare">
       <div class="card fareDisplay" style="width: auto;" id="fareCard">
         <br>
-          <button class="btn btn-danger float-right delete">add to Favorites</button>
+        <button class="btn btn-danger float-right delete">add to Favorites</button>
         <h1>{{drink.drinkName}}</h1>
         <img style="height: 350px" src="{{drink.drinkImage}}" alt="">
       </div>
@@ -12,21 +26,21 @@
 
     <div class="col-md-7 fare">
       <div class="card fareDisplay" style="width: auto;" id="fareCard">
-        
-          <h2 id="top-line">Ingredients</h2>
-          <ul>
-            {{#each drink.ingredients}}
-            <span id="ingredientPics">{{this.name}}: {{this.measurement}} </span>
-            <img src="https://www.thecocktaildb.com/images/ingredients/{{this.name}}-Small.png" alt="">
-            {{!-- <hr> --}}
-            
-           
-            {{/each}}
-          </ul>
-          
-        </div>
+
+        <h2 id="top-line">Ingredients</h2>
+        <ul>
+          {{#each drink.ingredients}}
+          <span id="ingredientPics">{{this.name}}: {{this.measurement}} </span>
+          <img src="https://www.thecocktaildb.com/images/ingredients/{{this.name}}-Small.png" alt="">
+          {{!-- <hr> --}}
+
+
+          {{/each}}
+        </ul>
+
       </div>
     </div>
+  </div>
   <hr>
 
   <br>
@@ -44,15 +58,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
