Adding back favorites into the app

--- a/Unsolved/public/styles/styles.css
+++ b/Unsolved/public/styles/styles.css
@@ -106,6 +106,13 @@ ul#drinks-list img.thumbnail {
   border: 1px solid lightslategrey;
   text-align: center;
 }
+#drink-fonti {
+  text-align: center;
+}
+#fareCard {
+  background-color: rgba(245, 245, 245, 0.4);background: transparent;
+  text-align: center;
+}
 @keyframes animate
 {
     0%
