--- a/Unsolved/views/favorites.handlebars
+++ b/Unsolved/views/favorites.handlebars
@@ -16,7 +16,7 @@
                   <a href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
                   <img class="thumbnail" src="{{this.drinkImage}}" alt="">
                  
-                  <button class="btn btn-danger float-right delete" "text-white">remove from Favorites</button>
+                  {{!--<button class="btn btn-danger float-right delete" "text-white">remove from Favorites</button>--}}
                 </li>
                 {{/each}}
               </ul>
