--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -46,6 +46,7 @@
                   <li data-id="{{this.idDrink}}" class="list-group-item">
                     <a id="drink-Option" href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
                     <img class="thumbnail" src="{{this.drinkImage}}" alt="">
+                    {{!--<button class="btn btn-danger float-right delete">x</button> --}}
 
                     {{!--<p>index page</p>--}}
                   </li>
