--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <!--- 1 . Message Welcome with a search bar and image / submit button-->
+<!--- 1 . Message Welcome with a search bar and image / submit button-->
 
 <head>
   <meta charset="utf-8">
@@ -8,36 +8,25 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <!---javascript-->
-
   <title>Cosmic Cocktails </title>
 </head>
 
 <body class="class-for-main">
   {{!-- Nav Bar --}}
   <nav class="navbar navbar-dark bg-dark">
-  
-  {{!--<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">--}}
+    {{!--<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">--}}
     <h3 class="my-0 mr-md-auto text-light font-weight-normal">Cosmic Cocktails</h3>
-    
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-light" href="/">Home</a>
-      <a class="p-2 text-light" href="/favorites">History</a>
+      <a class="p-2 text-light" href="/favorites">Favorites</a>
     </nav>
-    {{!--<a class="btn btn-outline-primary" href="/login">Sign In</a>--}}
-
+    <a class="btn btn-outline-primary" href="/login">Sign In</a>
   </nav>
-
   <main>
-    
     {{{body}}}
-
-  
-  
   </main>
-
-  
- 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/index.js"></script>
 </body>
+
 </html>
