--- a/Unsolved/views/drink.handlebars
+++ b/Unsolved/views/drink.handlebars
@@ -8,26 +8,17 @@
         /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #6A82FB, #FC5C7D);
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-<<<<<<< HEAD
-
-=======
->>>>>>> 7617441390be60d4b1c8645f1991763de6e9d17a
         width: auto;
         align-items: center;
       }
+      .fareDisplay{
+        background-color: rgba(255,255,255,0.2);
+      }
     </style>
-<<<<<<< HEAD
-
-    <div class="col-md-5 fare">
-      <div class="card fareDisplay" style="width: auto;" id="fareCard">
-        <br>
-        <button class="btn btn-danger float-right delete">add to Favorites</button>
-=======
     <div class="col-md-5 fare">
       <div class="card fareDisplay" style="width: auto;" id="fareCard">
         <br>
         {{!<button class="btn btn-danger float-right delete">add to Favorites</button>--}}
->>>>>>> 7617441390be60d4b1c8645f1991763de6e9d17a
         <h1>{{drink.drinkName}}</h1>
         <img style="height: 350px" src="{{drink.drinkImage}}" alt="">
       </div>
