completed log in and register, updated favorites and connected database

--- a/Unsolved/views/drink.handlebars
+++ b/Unsolved/views/drink.handlebars
@@ -19,6 +19,7 @@
         <h1>{{drink.drinkName}}</h1>
         <img style="height: 350px" src="{{drink.drinkImage}}" alt="">
            <p id="drink-fonti">Type: {{drink.alcohol}}</p>
+           <a href="/favorites/{{drink.idDrink}}">Favorite</a>
       </div>
     </div>
 
