--- a/Unsolved/views/login.handlebars
+++ b/Unsolved/views/login.handlebars
@@ -3,32 +3,20 @@
     <div class="col-md-12">
       <div class="container text-center login-form">
 
-        <form class="form-signin">
+        <form class="form-signin" action="/login" method="POST">
           <!-- main page and it shows login-->
           {{!-- <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> --}}
           <h1 class="h1 mb-6 font-weight-normal text-black">Please sign in</h1>
-          <label for="inputName" class="sr-only">Name</label>
-          <input type="name" id="inputName" class="form-control" placeholder="Enter Name" required="" autofocus="">
 
-            <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+          <label for="inputEmail" class="sr-only">Username</label>
+          <input type="text" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="" name="username">
 
           <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" name="password">
 
-          <div class="checkbox mb-r text-white">
-            <label>
-              <input type="checkbox" value="remember-me"> Remember me
-            </label>
-          </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
+          <a href="/register" class="btn btn-lg btn-primary btn-block" >Register</a>
           <p class="mt-5 mb-4 text-muted">© 2017-2020</p>
-        </form>
-
-        <form action="/login/">
-          {{!-- /favorites/userID --}}
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Login Test User</button>
-          <p>this is the login page</p>
         </form>
       </div>
     </div>
