--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -18,16 +18,14 @@
 
   <div class="container">
     <h1 class="display-4">Cosmic Cocktails</h1>
-    <h1>{{msg}}</h1>
-    <h2>Be your own bartender! Mix-up your own drink!</h2>
+    <h2>Be your own bartender!</h2>
 
     <form class="clearfix mb-4" method="GET" action="/">
       <div class="form-group">
-        <label for="drinks-name">Drink Name</label>
         <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name"
           placeholder="Enter Drink Name or a Letter">
       </div>
-      <button type="submit" id="submit" class="btn btn-primary float-right">Submit</button>
+      <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
 
