--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -14,8 +14,7 @@
 <body class="class-for-main">
   {{!-- Nav Bar --}}
   <nav class="navbar navbar-dark bg-dark">
-    {{!--<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">--}}
-    <h3 class="my-0 mr-md-auto text-light font-weight-normal">Cosmic Cocktails</h3>
+    <h3 class="my-0 mr-md-auto text-light font-weight-normal"><img class= "thumbnail" src="/Users/adamkwolff/Desktop/Vandy/Projects/ProjectTwo/Project2/Unsolved/public/assets/img/HeaderPhoto.png"></h3>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-light" href="/">Home</a>
       <a class="p-2 text-light" href="/favorites">Favorites</a>
