Finished the CSS and the project is ready to present.

--- a/Unsolved/views/layouts/main.handlebars
+++ b/Unsolved/views/layouts/main.handlebars
@@ -14,12 +14,14 @@
 <body class="class-for-main">
   {{!-- Nav Bar --}}
   <nav class="navbar navbar-dark bg-dark">
-    <h3 class="my-0 mr-md-auto text-light font-weight-normal"><img class= "thumbnail" src="/Users/adamkwolff/Desktop/Vandy/Projects/ProjectTwo/Project2/Unsolved/public/assets/img/HeaderPhoto.png"></h3>
+    <h3 class="my-0 mr-md-auto text-light font-weight-normal"><a class="navbar-brand" href="#" style="max-width: 14%;">
+    <img src="assets/img/CosmicCocktails.png" class="img-fluid">
+ </a></h3>
     <nav class="my-2 my-md-0 mr-md-3">
       <a class="p-2 text-light" href="/">Home</a>
       <a class="p-2 text-light" href="/favorites">Favorites</a>
     </nav>
-    <a class="btn btn-outline-primary" href="/login">Sign In</a>
+    <a class="btn btn-outline-primary" href="/login" id="signIn">Sign In</a>
   </nav>
   <main>
     {{{body}}}
