--- a/Unsolved/public/styles/styles.css
+++ b/Unsolved/public/styles/styles.css
@@ -1,12 +1,14 @@
-/*for main*/
+
+@font-face {
+  font-family: cocktail;
+  src: url(../assets/img/Cocktail\ Script.ttf);
+}
+
 .navbar {
   height: 100px;
   margin-bottom: 2em;
 }
-h5 {
-  font-family: "bevan";
-  src: url("../assets/img/Bevan.ttf")
-}
+
 #drinks-name {
   border: 5px solid darkslategrey;
 }
@@ -14,15 +16,14 @@ h5 {
   align-items: center;
   background-color: white;
 }
-/*below is also in favorites*/
+
 .list-group-item {
   line-height: 2.5;
 }
 .card {
   border: none;
 }
-#submit:before
-{
+#submit:before{
     content: '';
     position: absolute;
     top: -5px;
@@ -70,6 +71,7 @@ ul#drinks-list img.thumbnail {
   margin-top: 20px;
 }
 /*???*/
+
 #submit{
   transform: translate(-50%,-50%);
   color: #fff;
@@ -118,33 +120,7 @@ ul#drinks-list img.thumbnail {
     }
 }
 
-/*drink*/
-ul#drinks-list img.thumbnail {
-  width: 50px;
-  height: 50px;
-}
-#drink-fonts {
-  font-size: 20px;
-}
-.drink-font {
-  font-size: 20 px;
-}
-#card-border {
-  border: 1px solid lightslategrey;
-  text-align: center;
-}
 
-@keyframes animate
-{
-    0%
-    {
-      background-position: 0%;
-    }
-    100%
-    {
-      background-position: 400%;
-    }
-}
 
 /*##########################################*/
 .list-group-item{
@@ -152,17 +128,87 @@ ul#drinks-list img.thumbnail {
   text-align: center;
 }
 
+#listItems,
+.list-group-item,
 .card-header,
 #drink-Option{
-  color: palevioletred;
+  color: palevioletred !important;
   font-weight: bolder;
 }
+#listItems{
+  color: palevioletred !important;
+}
 
-.form-control{
+#drinks-name{
   width: 50%;
 }
 
+.img-fluid{
+  max-width: 420%;
+}
+
+.btn{
+  border-color: white;
+}
 
 
+#indexHeader{
+  font-family: "cocktail";
+  font-size: 5.5rem;
+}
 
+#indexHeader-signIn{
+  font-family: "cocktail";
+  font-size: 5.5rem;
+  color:plum;
+}
 
+#mixItUp{
+  font-family: "cocktail";
+  font-size: 3rem;
+}
+
+#inputPassword,
+#inputEmail,
+#inputUsername,
+#plum{
+  max-width: 50%;
+  display: inline-block;
+  text-align: center;
+}
+
+#signIn{
+  color: white;
+}
+
+#plum,
+#signIn:hover{
+  background-color: plum !important;
+}
+
+#favoritesBtn{
+  font-size: 2rem;
+  color:white;
+  font-family: "cocktail";
+
+}
+
+#fav-card{
+  background: rgb(0,0,0,0);
+  margin-top: 60px;
+}
+
+#fave-card{
+  background: #212529;
+}
+
+#plum{
+  margin-top: 0;
+  border-color: aquamarine;
+}
+
+#quote{
+  color: rgb(23, 41, 41);
+  font-family: "cocktail";
+
+}
