--- a/Unsolved/views/index.handlebars
+++ b/Unsolved/views/index.handlebars
@@ -5,7 +5,7 @@
       background-image: url(../assets/img/cosmic.jpg);
       background-repeat: no-repeat;
       background-position: fixed;
-      background-size:cover;
+      background-size: cover;
       background-attachment: fixed;
       width: auto;
       align-items: center;
@@ -17,8 +17,10 @@
   </style>
 
   <div class="container">
-    <h1 class="display-4">Cosmic Cocktails</h1>
-    <h2>Be your own bartender!</h2>
+    <h1 class="display-4" id="indexHeader">Why limit happy to an hour?</h1>
+    <br>
+    <br>
+    <h2 id="mixItUp">Let's mix it up</h2>
 
     <form class="clearfix mb-4" method="GET" action="/">
       <div class="form-group">
@@ -28,7 +30,6 @@
       <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-
 
   <div class="container">
     <div class="row">
@@ -44,9 +45,7 @@
                   <li data-id="{{this.idDrink}}" class="list-group-item">
                     <a id="drink-Option" href="drink/{{this.idDrink}}">{{this.drinkName}}</a>
                     <img class="thumbnail" src="{{this.drinkImage}}" alt="">
-                    {{!--<button class="btn btn-danger float-right delete">x</button> --}}
-
-                    {{!--<p>index page</p>--}}
+                    
                   </li>
                   {{/each}}
                 </ul>
