--- a/Unsolved/views/login.handlebars
+++ b/Unsolved/views/login.handlebars
@@ -1,22 +1,34 @@
 <div class="container" id="login-img">
+  <style>
+    body {
+      background-image: url(../assets/img/signINBackground.jpg);
+      background-repeat: no-repeat;
+      background-position: fixed;
+      background-size: cover;
+      background-attachment: fixed;
+      width: auto;
+      align-items: center;
+    }
+  </style>
   <div class="row">
     <div class="col-md-12">
       <div class="container text-center login-form">
 
         <form class="form-signin" action="/login" method="POST">
-          <!-- main page and it shows login-->
-          {{!-- <img class="mb-4" src="/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> --}}
-          <h1 class="h1 mb-6 font-weight-normal text-black">Please sign in</h1>
+    
+          <h1 class="h1 mb-6 font-weight-normal text-black" id="indexHeader-signIn">Please sign in</h1>
 
           <label for="inputEmail" class="sr-only">Username</label>
-          <input type="text" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="" name="username">
+          <input type="text" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus=""
+            name="username">
 
           <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" name="password">
+          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required=""
+            name="password">
 
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In</button>
-          <a href="/register" class="btn btn-lg btn-primary btn-block" >Register</a>
-          <p class="mt-5 mb-4 text-muted">© 2017-2020</p>
+          <button class="btn btn-lg btn-primary btn-block" type="submit" id="plum">Sign In</button>
+          <a href="/register" class="btn btn-lg btn-primary btn-block" id="plum">Register</a>
+          <h2 class="mt-5 mb-4" id="quote">Civilization begins with distillation - William Faulkner</h2>
         </form>
       </div>
     </div>
