--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -26,7 +26,7 @@
                 {{#each drinks}}
                 <li data-id="{{this.idDrink}}" class="list-group-item">
                   <a href="drink/{{this.idDrink}}" id="listItems">{{this.drinkName}}</a>
-                  <img class="thumbnail" src="{{this.drinkImage}}" alt="">
+                  <a href="drink/{{this.idDrink}}"><img class="thumbnail" src="{{this.drinkImage}}" alt=""></a>
                  
                   {{!--<button class="btn btn-danger float-right delete" "text-white">remove from Favorites</button>--}}
                 </li>
