--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,7 +25,7 @@
     <form class="clearfix mb-4" method="GET" action="/">
       <div class="form-group">
         <input name="query" type="text" id="drinks-name" class="form-control" aria-describedby="drinks-name"
-          placeholder="🍹 "Search" 🍹">
+          placeholder="🍹 Search 🍹">
       </div>
       <button type="submit" id="submit" class="btn btn-primary">Submit</button>
     </form>
